# agentic-rag-multi-agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agents/: relevance_checker.py  research_agent.py  verification_agent.py
chroma_db/: chroma.sqlite3
config/: settings.py
document_processor/: file_handler.py
retriever/: builder.py
test/: test1.py
