[tool.poetry]
name = "multi-agent-docchat"
version = "0.1.0"
description = "Multi-agent document chat system"
authors = ["Julien Lucas <contact@julienlucas.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
chromadb = "^1.0.15"
dotenv = "^0.9.9"
docling = "^2.43.0"
gradio = "^5.41.1"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-core = "^0.3.72"
langchain-mistralai = "^0.2.11"
langchain-text-splitters = "^0.3.9"
langgraph = "^0.6.3"
loguru = "^0.7.3"
numpy = ">=2.1.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
torch = "2.2.2"
torchvision = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
